--- a/LoginTest.html
+++ b/LoginTest.html
@@ -31,7 +31,16 @@
                 window.parent.postMessage(message, '*');
             }
         }
+        
+        function sendMessageFromiOS(message) {
+            document.getElementById('label-message').value = message
+        }
     </script>
+    
+    <form>
+        <label for="label-message">Name: </label>
+        <input type="text" id="label-message" name="message" />
+    </form>
 
     <input type="submit" value="Login" onclick="return sendMessage();" />
 </body>
