--- a/LoginTest.html
+++ b/LoginTest.html
@@ -38,7 +38,7 @@
     </script>
     
     <form>
-        <label for="label-message">Name: </label>
+        <label for="label-message"> iOS App Message: </label>
         <input type="text" id="label-message" name="message" />
     </form>
 
